--- a/frontend/about.html
+++ b/frontend/about.html
@@ -34,9 +34,10 @@
         </div>
         <div id="aboutMe">
             <p>
-                I'm a software developer, who was initially self taught, and have since enrolled in a bachelors degree in computer science, from which I will graduate in 2025.<br><br>
-                I have solely managed many projects in my 4 years experience, from simple static websites, to stream integration chat bots, to complex webapps.<br><br>
-                I have also had plenty of experience working on system administration, setting up, and maintaining many systems, particularly linux, primarily for serving the web, hosting databases, and custom APIs.
+                Welcome to my portfolio!<br><br>
+                I am a self-taught Software Engineer, who is undergoing a bachelor's degree in Computer Science. I will graduate in 2025 which I am most excited about.<br><br>
+                In my 4 years of experience, I have managed numerous projects, which have ranged from simple static websites, to stream chat bots, to complex webapps.<br><br>
+                I have also also worked on system administration, setting up, and maintaining several Linux systems, notably for serving the web, hosting databases, and developing bespoke APIs.
             </p>
         </div>
         <div id="mySkills">
@@ -60,9 +61,9 @@
         <div id="qualifications">
             <h3>My Qualifications and Certificates</h3>
             <div id="qualificationsContainer">
-                <p>Bachelors Degree in Computer Science, Open University (currently in 2nd year)</p>
+                <p>BSc (Honours) Computing and IT (Computer Science), Open University (currently in 2nd year)</p>
                 <p>Cisco Network Essentials 2.0 (2023)</p>
-                <p>Cisco Introduction to CyberSecurity(2023)</p>
+                <p>Cisco Introduction to CyberSecurity (2023)</p>
                 <p id="note">Qualification details available upon request</p>
             </div>
         </div>
