--- a/frontend/about.html
+++ b/frontend/about.html
@@ -37,7 +37,7 @@
                 Welcome to my portfolio!<br><br>
                 I am a self-taught Software Engineer, who is undergoing a bachelor's degree in Computer Science. I will graduate in 2025 which I am most excited about.<br><br>
                 In my 4 years of experience, I have managed numerous projects, which have ranged from simple static websites, to stream chat bots, to complex webapps.<br><br>
-                I have also also worked on system administration, setting up, and maintaining several Linux systems, notably for serving the web, hosting databases, and developing bespoke APIs.
+                I have experience with the configuration, and upkeep of multiple Linux systems, particularly those used for web server hosting, database hosting, and custom application interfaces.
             </p>
         </div>
         <div id="mySkills">
