--- a/frontend/project2.html
+++ b/frontend/project2.html
@@ -14,7 +14,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#66cccc">
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="theme-color" content="#ffffff">
-    <title>Levi Ives - Software Developer - Covalent Fragment Grouping</title>
+    <title>Levi Ives - Software Developer - CivFR Betting</title>
 </head>
 <body>
     <header>
@@ -31,21 +31,22 @@
     </header>
     <main>
         <div id="projectMainTitle">
-            <h1>Covalent Fragment Grouping</h1>   
+            <h1>CivFR Betting</h1>
         </div>
         <div id="projects">
             <div class="projectContainer">
                 <figure>
-                    <a href="https://github.com/leviives28/Covalent-Fragment-Grouping" target="_blank"><img src="./images/project2.png" alt="screenshot of python program" class="projectImage"></a>
-                    <figcaption> Another project built for a friend, who works in the science industry.<br><br>
-                        The requirement of the project was to read in a csv file, and sort the data in to groups based on user set constraints, such as maximum group size, and minimum difference between group items.<br><br>
-                        Once sorted in to groups, each group must be then placed within an individual plate well, before being output to a new csv file ready to use to sort fragment samples.<br><br>
-                        I initially approached the problem entirely from scratch, and although I did get the feature to mostly succeed, the outputs were not always optimized, so instead I decided to make use of the pulp library to solve the problem and optimize the groups as efficiently as possible.<br><br>
-                        You can view the source code on <a href="https://github.com/leviives28/Covalent-Fragment-Grouping" target="_blank" class="link">github</a>.</figcaption>
+                    <a href="https://civfrcards.me/" target="_blank"><img src="./images/project2.png" alt="screenshot of civfr betting mobile" class="projectImage"></a>
+                    <figcaption> A react web app built for the CivFR gaming community.<br><br>
+                        This web app allows bets to made on matches being played in the civfr community, as well as displaying a leaderboard, embedding the match live streams, and features an internal translation feature between French & English .<br><br>
+                        The front-end application is made with react, with an express backend, and mysql database to store matches, balances, and bet records. I was responsible for the front-end, backend, and database development, as well as ongoing maintenance.<br><br>
+                        The application links to and from a separate webapp, hosted on the same server, which I am now responsible for.<br><br>
+                        Credits to Phileas for the web design, who was commissioned separately, you can find more of his work here | link to be inserted here |.<br><br>
+                        You can view the web app at <a href="https://civfrcards.me/" target="_blank" class="link">https://civfrcards.me</a>.<br>
+                        <b>Note</b>: You will need to sign in with Twitch to use the application.</figcaption>
                 </figure>
             </div>
         </div>
     </main>
 </body>
 </html>
-
