--- a/frontend/projects.html
+++ b/frontend/projects.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <div id="projectMainTitle">
-            <h1>Projects</h1>   
+            <h1>Projects</h1>
         </div>
         <div id="projects">
             <div class="projectContainer">
@@ -41,9 +41,9 @@
                 </figure>
             </div>
             <div class="projectContainer">
-                <h3>Covalent Fragment Grouping</h3>
+                <h3>CivFR Betting</h3>
                 <figure>
-                    <a href="https://github.com/leviives28/Covalent-Fragment-Grouping" target="_blank"><img src="./images/project2.png" alt="screenshot of running covalent grouping program" class="projectImage"></a>
+                    <a href="https://civfrcards.me" target="_blank"><img src="./images/project2.png" alt="screenshot of civfr betting webapp" class="projectImage"></a>
                     <figcaption>Click <a href="./project2.html" class="link">here</a> for information</figcaption>
                 </figure>
             </div>
