--- a/frontend/project2.html
+++ b/frontend/project2.html
@@ -24,7 +24,6 @@
         <nav>
             <a href="./home.html" class="navLink">Home</a>
             <a href="./about.html" class="navLink">About</a>
-            <a href="./projects.html" class="navLink">Projects</a>
             <a href="./reviews.html" class="navLink">Reviews</a>
             <a href="./contact.html" class="navLink">Contact</a>
         </nav>
@@ -41,7 +40,7 @@
                         This web app allows bets to made on matches being played in the civfr community, as well as displaying a leaderboard, embedding the match live streams, and features an internal translation feature between French & English .<br><br>
                         The front-end application is made with react, with an express backend, and mysql database to store matches, balances, and bet records. I was responsible for the front-end, backend, and database development, as well as ongoing maintenance.<br><br>
                         The application links to and from a separate webapp, hosted on the same server, which I am now responsible for.<br><br>
-                        Credits to Phileas for the web design, who was commissioned separately, you can find more of his work here | link to be inserted here |.<br><br>
+                        Credits to <a href="https://instagram.com/charles_husson/" target="_blank">Phileas</a> for the web design.<br><br>
                         You can view the web app at <a href="https://civfrcards.me/" target="_blank" class="link">https://civfrcards.me</a>.<br>
                         <b>Note</b>: You will need to sign in with Twitch to use the application.</figcaption>
                 </figure>
